--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="./manifest.json" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link href="./style.css" rel="stylesheet" />
     <title>eco.mio Webtool</title>
   </head>
 
